--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,6 @@ html {
 
 .grid {
   display: grid;
-  row-gap: 9.6rem;
   column-gap: 6.4rem;
   grid-template-columns: repeat(2, 1fr);
 }
@@ -33,10 +32,6 @@ html {
 
 .grid--3-cols {
   grid-template-columns: repeat(3, 1fr);
-}
-
-.grid--4-cols {
-  grid-template-columns: repeat(4, 1fr);
 }
 
 .grid--center-v {
@@ -156,9 +151,6 @@ html {
 .about-us-text {
   font-size: 1.8rem;
   color: #0a3641;
-  margin-left: %;
-  margin-top: 5%;
-  margin-bottom: 5%;
 }
 
 .about-header {
@@ -199,15 +191,14 @@ html {
   float: left;
   background-color: #5f9fad;
   width: 33.33%;
-  margin-right: 2rem;
-  padding: 5rem 5rem 5rem 5rem;
+  gap: 2rem;
+  padding: 5rem;
 }
 
 .product-img {
   height: 20rem;
-  padding: 5% 5% 5% 5%;
+  width: 33.33%;
 }
-
 /********************************/
 /* Footer Section */
 /********************************/
